--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "meituan",
+  "name": "meituan_mobile",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "yoee",
+  "author": "yoee yoeex@outlook.com",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
